--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "888sports-api": "^1.0.7",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/universal-storage": "^0.5.9",
     "core-js": "^3.15.1",
     "moment": "^2.29.1",
     "nuxt": "^2.15.7",
+    "nuxt-google-sheets-parser": "^1.2.4",
     "nuxt-material-design-icons": "^1.0.4",
+    "vue-csv-import": "^4.1.2",
     "vue-excel-xlsx": "^1.0.11",
+    "vue-filereader": "^0.1.1",
+    "vue-js-xlsx": "0.0.2",
+    "vue-mg-csv-importer": "^1.0.5",
     "vue-toastification": "^1.7.11",
     "vue-viacep": "^1.0.4",
+    "vue-xlsx": "^0.2.1",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.5.8",
     "vuetify-mask": "^1.1.2",
