--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
-    "888sports-api": "^1.0.7",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/universal-storage": "^0.5.9",
+    "chart.js": "^2.7.1",
     "core-js": "^3.15.1",
     "moment": "^2.29.1",
     "nuxt": "^2.15.7",
     "nuxt-google-sheets-parser": "^1.2.4",
     "nuxt-material-design-icons": "^1.0.4",
+    "vue-chartjs": "^3.4.0",
     "vue-csv-import": "^4.1.2",
     "vue-excel-xlsx": "^1.0.11",
     "vue-filereader": "^0.1.1",
